- Fixed drag and drop questions about background color issue with Chrome (#1831)
- Fixed improper handling of file black list during file upload
- Fixed tracking initialization about feedbacks
- Fixed feedback preview
- Fixed lesson timelines not listing events
- Fixed issue in forum page about pagination and subforums

=== Version 3.6.10 build 11973 ===
- Fixed error introduced in personal page (Community++/Educational editions)
- Fixed upgrade error for 3.6.10
- Updated Indonesian language file

=== Version 3.6.10 build 11944 ===
- Added a "remember me" checkbox in login form (toggled from admin settings)
- Added a page that allows for applying the same settings across all lesson units
- Added an option to send notifications as personal messages
- Added forums and topics pagination
- Added limits for space usage in messages
- Added sorting terms in each tab in glossary page
- Added help links to modules towards the wiki page
- Added option to constrain XML API usage to a specific IP
- Added a minimal_view parameter for displaying less columns for messages in dashboard
- Added a trim in exploded fields from csv file
- Added urlencode when loading avatar
- Added index page parameter to filter courses/lessons (index.php?filter=maya)
- Added header for date in Mail::factory because of http://pear.php.net/manual/en/package.mail.mail.send.php
- Added encodeURIComponent in filters http://www.sencha.com/forum/archive/index.php/t-96295.html
- Added option to deactivate block moving in control panel for specific user types (#809)
- Added ability to import list of users to be archived
- Added "my courses" tools icon to user dashboard
- Added optional active time tracking (Educational/Enterprise editions)
- Added toggle checkbox for LDAP users in user's profile page (Educational/Enterprise editions)
- Added CEUs parameter in courses (Enterprise/Educational edition)
- Added time-based lesson completion rules (Enterprise/Educational edition)