@@ -1,0 +1,7 @@
+<?php
+define("_MODULE_SECURITY_MODULESECURITY", "Security module");
+define("_MODULE_SECURITY_LOCALISSUE", "Security issue");
+define("_MODULE_SECURITY_INSTALLATIONFOLDERSTILLEXISTS", "Installation folder, www/install, still exists");
+define("_MODULE_SECURITY_MAGICQUOTESGPCISON", "php ini setting 'magic_quotes_gpc' is ON");
+define("_MODULE_SECURITY_DEFAULTACCOUNTSSTILLEXIST", "Default accounts with default credentials, <b>student/student</b> and <b>professor/professor</b> still exist");
+?>
