@@ -3,7 +3,6 @@
 define('_TRAININGREPORTS', 'Training periods report');
 
 define('_TRAININGREPORTS_SELECTREPORT', 'Select report');
-
 define('_TRAININGREPORTS_SEPARATEDBY', 'Group by');
 define('_TRAININGREPORTS_WEEKS', 'Weeks');
 define('_TRAININGREPORTS_FORTNIGHTS', 'Fortnights');
@@ -22,7 +21,6 @@ define('_TRAININGREPORTS_ADDFIELD', 'Add field');
 define('_TRAININGREPORTS_STARTDATEAFTERENDDATE', 'From date is after End date');
 define('_TRAININGREPORTS_INVALIDDATE', 'Date is not valid');
 define('_TRAININGREPORTS_MAXCOLUMNSEXCEEDED', 'The report exceeds the max columns Excel can display.<br/>Try to limit the selected period or select a longer interval from the "Group by" field.');
-
 
 define('_TRAININGREPORTS_SUCCESSFULLYCREATED', 'The report was created');
 define('_TRAININGREPORTS_SUCCESSFULLYDELETED', 'The report was deleted');
